Cycles rendered viewport overlays depth buffer not updating #65185

Closed
opened 2019-05-27 15:12:51 +02:00 by Sebastian Koenig · 7 comments

System Information
Operating system: Linux-4.4.0-146-generic-x86_64-with-debian-stretch-sid 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.56

Blender Version
Broken: version: 2.80 (sub 72), branch: master, commit date: 2019-05-27 12:40, hash: a096fbb32d

Short description of error
The viewport doesnt update correctly in Cycles rendered viewport.

Exact steps for others to reproduce the error
Go to Cycles rendered viewport and move the cube. The result looks like in the image below.
rendered_viewport.jpg

**System Information** Operating system: Linux-4.4.0-146-generic-x86_64-with-debian-stretch-sid 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 418.56 **Blender Version** Broken: version: 2.80 (sub 72), branch: master, commit date: 2019-05-27 12:40, hash: `a096fbb32d` **Short description of error** The viewport doesnt update correctly in Cycles rendered viewport. **Exact steps for others to reproduce the error** Go to Cycles rendered viewport and move the cube. The result looks like in the image below. ![rendered_viewport.jpg](https://archive.blender.org/developer/F7072111/rendered_viewport.jpg)
Author
Member

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k
Clément Foucault was assigned by William Reynish 2019-05-27 15:28:24 +02:00
Clément Foucault was unassigned by Brecht Van Lommel 2019-05-27 15:37:57 +02:00
Jeroen Bakker was assigned by Brecht Van Lommel 2019-05-27 15:37:57 +02:00

Added subscriber: @fclem

Added subscriber: @fclem

Added subscriber: @brecht

Added subscriber: @brecht

This is due to 5ec7987 most likely.

This is due to 5ec7987 most likely.
Brecht Van Lommel changed title from Rendered Viewport overlays broken to Cycles rendered viewport overlays depth buffer not updating 2019-05-29 03:05:42 +02:00
Jeroen Bakker was unassigned by Brecht Van Lommel 2019-05-29 03:05:42 +02:00
Brecht Van Lommel self-assigned this 2019-05-29 03:05:42 +02:00

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker

This issue was referenced by e7e52f7cff

This issue was referenced by e7e52f7cff3abf36f3a3a0b70c86db5c2ed86324

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65185
No description provided.