Fix T65185: Cycles viewport render no refreshing overlays properly

Don't rely on detecting view matrix changes to refresh depth buffer, instead
detect redraw tags coming from progressive render samples.